# wgpu-tests

./: Cargo.toml  test_image1.tif  test_image2.tif
shaders/: test1.wgsl  test_compute.wgsl
src/: compute_pixel_dif.rs  lib.rs  main.rs
