[package]
name = "wgpu-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
pollster = "0.3.0"
tiff = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = { version = "22.1.0" }
winit = { version = "0.29" }
